// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when log out 1`] = `
<div>
  <div
    class="Login card text-center dark"
  >
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        You are not logged in
      </h5>
      <p
        class="card-text"
      >
        Connect to MetaMask to manage your account.
      </p>
      <div
        class="Button dark"
      >
        Connect
      </div>
    </div>
  </div>
</div>
`;

exports[`when logged in 1`] = `
<div>
  <div
    class="Login card text-center dark"
  >
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Welcome!
      </h5>
      <p
        class="card-text"
      >
        You have now logged in. Your address is 0x
        4e30
        ...
        f7a7
      </p>
      <div
        class="Button dark"
      >
        Disconnect
      </div>
    </div>
  </div>
</div>
`;

exports[`when metamask is not installed 1`] = `
<div>
  <div
    class="Login card text-center dark"
  >
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        MetaMask is not installed
      </h5>
      <p
        class="card-text"
      >
        Would you like to install it now?
      </p>
      <a
        href="https://metamask.io"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          class="Button dark"
        >
          Install MetaMask
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`when metamask is on the wrong network 1`] = `
<div>
  <div
    class="Login card text-center dark"
  >
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Wrong network detected
      </h5>
      <p
        class="card-text"
      >
        Please set MetaMask's network to 
        Ropsten
         and try again.
      </p>
      <div
        class="Button dark"
      >
        Try again
      </div>
    </div>
  </div>
</div>
`;

exports[`when not logged in 1`] = `
<div>
  <div
    class="Login card text-center dark"
  >
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        You are not logged in
      </h5>
      <p
        class="card-text"
      >
        Connect to MetaMask to manage your account.
      </p>
      <div
        class="Button dark"
      >
        Connect
      </div>
    </div>
  </div>
</div>
`;
